--- a/main.css
+++ b/main.css
@@ -84,8 +84,10 @@ li.nav__item {
 
 .nav {
   width: 100%;
-  margin-left: auto;
-  margin-right: auto;
+  position: relative;
+
+  /*margin-left: auto;
+  margin-right: auto;*/
 }
 
 .nav__list {
@@ -94,7 +96,6 @@ li.nav__item {
   margin: 0;
   display: flex;
   flex-wrap: wrap;
-
 }
 
 .nav__item {
@@ -118,7 +119,10 @@ li.nav__item {
   text-decoration: underline;
   color: #212121;
 }
+nav.open {
 
+        transform: translate(0, 0);
+      }
 
 /*
  *
@@ -357,37 +361,80 @@ main {
   text-decoration: underline;
 }
  /*the media query did not work when it was placed before the weather */
-@media screen and (min-width: 450px){
+@media screen and (max-width: 450px){
+  .nav__item {
+  line-height: 8px;
+  padding: 1.1em;
+  }
+  .nav a {
+  padding: 1.1em;
+  min-width: 48px;
+  }
+  li a {
+    font-size: 18px;
+  }
+}
+
+@media screen and (min-width: 451px){
+
   .scores {
     width: 50%;
-    }
+  }
   .weather {
     width: 50%;
   }
 }
 
+
+/*.nav {
+    width: 200px;
+    height:20%;
+    position: absolute;
+    transform: translate (-300px,0);
+    transition: transform 0.3s ease;
+  }
+}*/
+ @media screen and (min-width: 600px) {
+
+        /* We open the drawer. */
+        nav {
+          position:relative;
+          transform: translate(0, 0);
+        }
+      }
 @media screen and (min-width: 900px){
   .hero {
     width: 50%;
     padding:40px; /*setting margin at 20px disables side-by-side of hero and top-news */
-    order:-1;
   }
   li.nav__item {
   margin: 0;
   }  /*eliminating margin finally allows all four nav items to appear in 1 single row */
   .top-news {
     width: 50%;
-    padding:40px;
+    padding:100px;
+
   }
   .scores {
-    padding:40px;
-    order:2;
+    padding:100px;
+
   }
   .weather {
-    padding:40px;
-    order: 3;
+    padding:100px;
+
   }
 }
+@media screen and (min-width: 1850px){
+
+  *{
+    font-size: 1.1em;
+    }
+  body {
+    width: 1850px;
+    margin-left:auto;
+    margin-right:auto;
+   }
+} /*to prevent unnecessary stretching of content */
 /*
  *
  * Footer
